[gd_scene load_steps=30 format=3 uid="uid://cv38awhdc6tbb"]

[ext_resource type="Script" path="res://scripts/climb.gd" id="1_fpvvq"]
[ext_resource type="PackedScene" uid="uid://dac50v5yr7fx6" path="res://scenes/climb/modules/module_0.tscn" id="2_di4ik"]
[ext_resource type="PackedScene" uid="uid://beblkgsblksrl" path="res://scenes/climb/modules/module_1.tscn" id="3_nr4ll"]
[ext_resource type="PackedScene" uid="uid://bgiqielq6ue7g" path="res://scenes/climb/modules/module_2.tscn" id="4_77qna"]
[ext_resource type="PackedScene" uid="uid://bpahixkij5lvk" path="res://scenes/climb/modules/module_smile.tscn" id="5_2benw"]
[ext_resource type="PackedScene" uid="uid://bwkwtaue0x3yi" path="res://scenes/common/camera.tscn" id="5_gsf0x"]
[ext_resource type="PackedScene" uid="uid://b22dckdho80ey" path="res://scenes/common/transition.tscn" id="5_vp01x"]
[ext_resource type="PackedScene" uid="uid://cslxaxhgvxwyt" path="res://scenes/climb/gui.tscn" id="6_alj40"]
[ext_resource type="PackedScene" uid="uid://bg5du56kek2ie" path="res://scenes/climb/modules/module_4.tscn" id="6_osg45"]
[ext_resource type="PackedScene" uid="uid://cncpw54e7xo7" path="res://scenes/common/debugger.tscn" id="7_ei4yj"]
[ext_resource type="PackedScene" uid="uid://b5qiq18hr2n5y" path="res://scenes/climb/modules/module_cliff.tscn" id="7_ojkd8"]
[ext_resource type="PackedScene" uid="uid://dmb6eo8mbvh1g" path="res://scenes/climb/modules/module_6.tscn" id="8_unvid"]
[ext_resource type="PackedScene" uid="uid://wvc313jlr258" path="res://scenes/common/giant.tscn" id="8_yerx6"]
[ext_resource type="PackedScene" uid="uid://bq7kio7o4s6hk" path="res://scenes/climb/modules/module_triangle.tscn" id="9_pb84a"]
[ext_resource type="PackedScene" uid="uid://bsachn57k1fn7" path="res://scenes/climb/modules/module_8.tscn" id="10_hyrjk"]
[ext_resource type="PackedScene" uid="uid://c48lkfycgmf56" path="res://scenes/climb/modules/module_9.tscn" id="11_43jo1"]
[ext_resource type="PackedScene" uid="uid://d1hlrv040qpa7" path="res://scenes/climb/modules/module_10.tscn" id="12_28pup"]
[ext_resource type="PackedScene" uid="uid://b15hq7dh5gb3o" path="res://scenes/climb/modules/module_11.tscn" id="13_mxnyw"]
[ext_resource type="PackedScene" uid="uid://cmypp0neyiqol" path="res://scenes/climb/modules/module_sword.tscn" id="14_ursuo"]
[ext_resource type="PackedScene" uid="uid://cfikiy46g8wu8" path="res://scenes/climb/modules/module_beach.tscn" id="15_r151g"]
[ext_resource type="PackedScene" uid="uid://cce2h53w0hiy5" path="res://scenes/climb/modules/module_spires.tscn" id="16_x7kq8"]
[ext_resource type="PackedScene" uid="uid://dffx8b6djohbj" path="res://scenes/climb/modules/module_15.tscn" id="17_vqjlu"]
[ext_resource type="PackedScene" uid="uid://r4jjxblbvv02" path="res://scenes/climb/modules/module_deathpit.tscn" id="18_x6j2u"]
[ext_resource type="PackedScene" uid="uid://dtav2i2wlyjq5" path="res://scenes/climb/modules/module_pyramid.tscn" id="19_hy7er"]
[ext_resource type="PackedScene" uid="uid://vflfuqfla3bd" path="res://scenes/climb/modules/module_battlefield.tscn" id="20_hnkms"]
[ext_resource type="PackedScene" uid="uid://r21y4jxvd032" path="res://scenes/climb/modules/module_illuminati.tscn" id="21_udgj3"]
[ext_resource type="Texture2D" uid="uid://cv6h10wng21us" path="res://assets/visual/gameplay - sky.png" id="26_wwtm5"]
[ext_resource type="Texture2D" uid="uid://cwgqlkryu73c7" path="res://assets/visual/gameplay - back mountains.png" id="27_ur2r2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b10jr"]
size = Vector2(118, 1986)

[node name="Climb" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_fpvvq")
room_scenes = Array[PackedScene]([ExtResource("2_di4ik"), ExtResource("3_nr4ll"), ExtResource("4_77qna"), ExtResource("5_2benw"), ExtResource("6_osg45"), ExtResource("7_ojkd8"), ExtResource("8_unvid"), ExtResource("9_pb84a"), ExtResource("10_hyrjk"), ExtResource("11_43jo1"), ExtResource("12_28pup"), ExtResource("13_mxnyw"), ExtResource("14_ursuo"), ExtResource("15_r151g"), ExtResource("16_x7kq8"), ExtResource("17_vqjlu"), ExtResource("18_x6j2u"), ExtResource("19_hy7er"), ExtResource("20_hnkms"), ExtResource("21_udgj3")])

[node name="Transition" parent="." instance=ExtResource("5_vp01x")]
fade_in_time = 1.0
fade_out_time = 2.0

[node name="Camera" parent="." instance=ExtResource("5_gsf0x")]

[node name="GUI" parent="." instance=ExtResource("6_alj40")]

[node name="Debugger" parent="." instance=ExtResource("7_ei4yj")]

[node name="Terrain" type="Node" parent="."]

[node name="Giant" parent="." instance=ExtResource("8_yerx6")]
position = Vector2(85, 600)

[node name="StartWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartWall"]
position = Vector2(-69, 595)
shape = SubResource("RectangleShape2D_b10jr")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="SkyLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0)

[node name="Sky" type="Sprite2D" parent="ParallaxBackground/SkyLayer"]
position = Vector2(1520, 540)
texture = ExtResource("26_wwtm5")

[node name="MountainsLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0)

[node name="BackMountains" type="Sprite2D" parent="ParallaxBackground/MountainsLayer"]
position = Vector2(1520, 540)
texture = ExtResource("27_ur2r2")

[connection signal="fade_in_completed" from="Transition" to="." method="_on_transition_fade_in_completed"]
[connection signal="fade_out_completed" from="Transition" to="." method="_on_transition_fade_out_completed"]
[connection signal="artifact_collected" from="Giant" to="." method="_on_giant_artifact_collected"]
[connection signal="currency_collected" from="Giant" to="." method="_on_giant_currency_collected"]
[connection signal="hazard_hit" from="Giant" to="." method="_on_giant_hazard_hit"]
[connection signal="potion_collected" from="Giant" to="." method="_on_giant_potion_collected"]
